--- a/index_copy.html
+++ b/index_copy.html
@@ -73,7 +73,7 @@
 					</ol>				
 				</li>
 			</ol>
-			<a href="https://www.facebook.com/hostlife.net" target="_blank" rel="nofollow"><img src="/images/soc_1.png" alt="HOSTLIFE в Facebook"></a>
+			<a href="https://www.facebook.com/profile.php?id=100026723641449" target="_blank" rel="nofollow"> alt="Юра у Фейсбуку"></a>
 			</ol>
 		<div>	
 	</body>
