--- a/index_copy.html
+++ b/index_copy.html
@@ -73,7 +73,7 @@
 					</ol>				
 				</li>
 			</ol>
-			<a href="https://www.facebook.com/profile.php?id=100026723641449" target="_blank" rel="nofollow">Юра у Фейсбуку<alt="Гляньте"></a>
+			<a href="https://www.facebook.com/profile.php?id=100026723641449" target="_blank" rel="nofollow">Юра у Фейсбуку<img alt="Гляньте"></a>
 			</ol>
 		<div>	
 	</body>
