--- a/index_copy.html
+++ b/index_copy.html
@@ -74,7 +74,7 @@
 				</li>
 			</ol>
 			<a href="https://www.facebook.com/profile.php?id=100026723641449" target="_blank" rel="nofollow">Юра у Фейсбуку<img alt="Гляньте"></a>
-				<p><a href="https://www.facebook.com/profile.php?id=100026723641449"><img src="https://c7.hotpng.com/preview/286/412/950/facebook-scalable-vector-graphics-icon-facebook-logo-png.jpg" alt="ГЛЯНЬТЕ"></a></p>
+				<p><a href="https://www.facebook.com/profile.php?id=100026723641449"><img src="hotpng.com.png" alt="ГЛЯНЬТЕ"></a></p>
 			</ol>
 		<div>	
 	</body>
